# pandemic_models

./: .gitignore  README.md
data_and_data_files/: data_converter.cpp  geneva_1918.csv
logistic_model_forecasts/: CMakeLists.txt  class_acquisition_data_test  converter.cpp  logistic_model.cpp  logistic_model.hpp  logistic_test.cpp  main.cpp  root_logistic.C  sati.md  soddisfazione.txt
mandatory_sir_model/: CMakeLists.txt  Least_Squares.cpp  Least_Squares.hpp  Pandemy.cpp  Pandemy.hpp  Parser.cpp  Parser.hpp  Print.cpp  Print.hpp  State.cpp  State.hpp  Virus.cpp  Virus.hpp  main.cpp  main.out  pandemy.C  pandemy.cpp  pandemy.test.cpp  pandemy_progression.test.cpp  print.hpp  root_pandemy.C  yanky
new_analysis/: China.csv  FitGaus.cpp  GausMain.cpp  Italy.csv  dati.csv  geneva_1918.csv  italy.C  root.C
new_analysis/root/: dati.csv  italy.C
new_analysis/root/geneva/: geneva.csv  root.C
new_analysis/root/italy/: dati.csv  italy.C
new_analysis/src/: FitGaus.hpp  csv_reader.cpp
odeint_SEIRD_model/: SEIRD_odeint.hpp  Virus.hpp  main.cpp  seird_odeint.cpp
odeint_SIRD_model/: Sird_odeint.cpp  Virus.hpp  main.cpp
odeint_SIRS_model/: Fitting.cpp  Fitting.hpp  Sirs_odeint.cpp  Sirs_odeint.hpp  Virus.cpp  Virus.hpp  main.cpp
odeint_sir_model/: sir_odeint.cpp
stocastic_sir_model/: sir_stocastic.cpp
tex_article/: Coli_Sguera_Relazione.aux  Coli_Sguera_Relazione.tex  Coli_Sguera_Relazione.toc  abstract.tex  bibliography.tex  conclusions.tex  graphic_simulation.tex  logistic_model.tex  mandatory_sir.tex
tries/: sir_odeint.cpp
